syntax="proto3";
package post.model;

option go_package= "postpb";

message User {
	string ID = 1;
	string Name = 2;
}

message Post {
	string ID = 1;
	string Text = 2;
	User User = 3;
	Timestamp Timestamp = 4;
}

message Posts {
	repeated Post Posts = 1;
}

message Timestamp {
	int64 EpochNanoseconds = 1;
}
